# manage-repos

./: README.md  pyproject.toml
manage_repos/: __main__.py  manage_repos.py
